# screencap-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/screencap-cli/: Cargo.toml
crates/screencap-cli/src/: cli.rs  main.rs  run.rs
crates/screencap-cli/tests/: cli_contract.rs
crates/screencap-core/: Cargo.toml
crates/screencap-core/src/: capture_dxgi.rs  capture_gdi.rs  capture_wgc.rs  crop.rs  d3d11_copy.rs  encode_png.rs  image_stats.rs  lib.rs  logging.rs  monitor_enum.rs  types.rs  util.rs  window_enum.rs
crates/screencap-gui/: Cargo.toml
crates/screencap-gui/src/: gui.rs  main.rs
docs/: release-code-reading.md
