[package]
name = "screencap-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "screencap-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
screencap-core = { path = "../screencap-core" }
serde_json = "1.0.150"
windows = { workspace = true }
